--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
         </div>
 
         <div id="documentos-models" class="model-selector hidden">
-            <a href="documentos/configurar_vpn.pdf" download="configurar_vpn.pdf" class="model-btn">Configurar VPN (PDF)</a>
-            <a href="documentos/instrução_normativa_conjunta_cge.pdf" download="instrução_normativa_conjunta_cge.pdf" class="model-btn">Instrução Normativa SEI</a>
-            <a href="documentos/planilha_cadastro_sei.xlsx" download="planilha_cadastro_sei.xlsx" class="model-btn">Planilha Cadastro SEI</a>
-            <a href="documentos/respostas_padrao_word.docx" download="respostas_padrao_word.docx" class="model-btn">Respostas Padrão (Word)</a>
+            <a href="documentos1/configurar_vpn.pdf" download="configurar_vpn.pdf" class="model-btn">Configurar VPN (PDF)</a>
+            <a href="documentos1/instrução_normativa_conjunta_cge.pdf" download="instrução_normativa_conjunta_cge.pdf" class="model-btn">Instrução Normativa SEI</a>
+            <a href="documentos1/planilha_cadastro_sei.xlsx" download="planilha_cadastro_sei.xlsx" class="model-btn">Planilha Cadastro SEI</a>
+            <a href="documentos1/respostas_padrao_word.docx" download="respostas_padrao_word.docx" class="model-btn">Respostas Padrão (Word)</a>
         </div>
 
         <div id="utilidades-models" class="model-selector hidden">
@@ -474,4 +474,5 @@
     }
 </script>
 </body>
+
 </html>
