--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <button class="tab-btn" id="btn-eturmalina" onclick="showSystem('eturmalina')">e-Turmalina</button>
     <button class="tab-btn" id="btn-integracao" onclick="showSystem('integracao')">Integração</button>
     <button class="tab-btn" id="btn-grp" onclick="showSystem('grp')">GRP</button>
+	<button class="tab-btn" id="btn-vpn" onclick="showSystem('vpn')">VPN</button>
     <button class="tab-btn" id="btn-documentos" onclick="showSystem('documentos')">Documentos</button>
     <button class="tab-btn" id="btn-utilidades" onclick="showSystem('utilidades')">Utilidades</button>
     <button class="tab-btn" id="btn-notas" onclick="showSystem('notas')">Bloco de Notas</button>
@@ -141,6 +142,11 @@
         <div id="grp-models" class="model-selector hidden">
             <button class="model-btn" onclick="selectModel('grp', 'criacao_acesso')">Criação de Acesso/Reset</button>
         </div>
+
+		<div id="vpn-models" class="model-selector hidden">
+   			 <button class="model-btn" onclick="selectModel('vpn', 'acesso_vpn')">Criação de VPN</button>
+   				 <a href="documentos1/configurar_vpn.pdf" download target="_blank" class="model-btn" style="border: 2px solid #1a252f; font-weight: bold;">📥 Baixar Manual VPN</a>
+			</div>
 
         <div id="documentos-models" class="model-selector hidden">
             <a href="documentos1/configurar_vpn.pdf" download="configurar_vpn.pdf" class="model-btn">Configurar VPN (PDF)</a>
@@ -318,7 +324,14 @@
                 placeholder: "Ex: quarenta e lá vai pancada",
                 fn: (v) => `Prezado(a),\nSua solicitação foi atendida.\n\nUsuário(s): \n${v[0]}\nSenha: 123\n\nFicamos à disposição para quaisquer esclarecimentos.`
             }
-        }
+        }, 
+        vpn: {
+            acesso_vpn: { 
+                inputs: ['Usuário'], 
+                fn: (v) => `Prezado(a),\n\nCriado o acesso a VPN conforme o solicitado.\n\nUsuário: ${v[0]}\nSenha: Mesma utilizada no SEI, webmail e intertet.\n\nSiga as orientações do manual em anexo para a configuração.` 
+            }
+        } 
+        
     };
 
     function checkPass() {
@@ -358,6 +371,7 @@
             eturmalina: 'e-Turmalina', 
             integracao: 'Integração', 
             grp: 'GRP', 
+            vpn: 'VPN - Acesso Remoto',
             documentos: 'Documentos e Modelos',
             utilidades: 'Utilidades e Links Importantes',
             notas: 'Bloco de Notas Pessoal'
@@ -464,7 +478,7 @@
         updatePreview();
     }
 
-    /* PERSISTENCIA NOTAS */
+    /* BLOCO DE NOTAS */
     function saveNotes() {
         localStorage.setItem('rascunho_notas', document.getElementById('notes-area').value);
     }
