--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
 
         <div id="notas-models" class="hidden">
-            <textarea id="notes-area" oninput="saveNotes()" placeholder="Escreva seus rascunhos aqui... Tudo é salvo automaticamente."></textarea>
+            <textarea id="notes-area" oninput="saveNotes()" placeholder="Qualquer biruliro escrito aqui ficará salvo até você limpar o cache do navegador."></textarea>
         </div>
 
         <div id="workspace-area">
@@ -328,7 +328,7 @@
         vpn: {
             acesso_vpn: { 
                 inputs: ['Usuário'], 
-                fn: (v) => `Prezado(a),\n\nCriado o acesso a VPN conforme o solicitado.\n\nUsuário: ${v[0]}\nSenha: Mesma utilizada no SEI, webmail e intertet.\n\nSiga as orientações do manual em anexo para a configuração.` 
+                fn: (v) => `Prezado(a),\n\nCriado o acesso a VPN conforme o solicitado.\n\nUsuário: ${v[0]}\nSenha: Mesma utilizada no SEI, webmail e internet.\n\nSiga as orientações do manual em anexo para a configuração.` 
             }
         } 
         
@@ -490,3 +490,4 @@
 </body>
 
 </html>
+
